# Qt

./: .gitignore  CMakeLists.txt  README.md  lights.cpp  lights.h  main.cpp  patternMaker.cpp  watch.cpp  watch.h
gPatternMaker/: CMakeLists.txt  tst_patternsize.cpp
qPatternMaker/: CMakeLists.txt  tst_patternsize.cpp
